@@ -4,7 +4,7 @@ running configure, to aid debugging if configure makes a mistake.
 It was created by libatomic_ops configure 1.2, which was
 generated by GNU Autoconf 2.63.  Invocation command line was
 
-  $ ./configure --disable-option-checking --prefix=/usr/local --cache-file=/dev/null --srcdir=.
+  $ ./configure --disable-option-checking --prefix=/usr/local --enable-developer --cache-file=/dev/null --srcdir=.
 
 ## --------- ##
 ## Platform. ##
