@@ -357,7 +357,7 @@ Report bugs to <bug-autoconf@gnu.org>."
 ac_cs_version="\
 libatomic_ops config.status 1.2
 configured by ./configure, generated by GNU Autoconf 2.63,
-  with options \"'--disable-option-checking' '--prefix=/usr/local' '--cache-file=/dev/null' '--srcdir=.'\"
+  with options \"'--disable-option-checking' '--prefix=/usr/local' '--enable-developer' '--cache-file=/dev/null' '--srcdir=.'\"
 
 Copyright (C) 2008 Free Software Foundation, Inc.
 This config.status script is free software; the Free Software Foundation
@@ -439,7 +439,7 @@ if $ac_cs_silent; then
 fi
 
 if $ac_cs_recheck; then
-  set X '/bin/bash' './configure'  '--disable-option-checking' '--prefix=/usr/local' '--cache-file=/dev/null' '--srcdir=.' $ac_configure_extra_args --no-create --no-recursion
+  set X '/bin/bash' './configure'  '--disable-option-checking' '--prefix=/usr/local' '--enable-developer' '--cache-file=/dev/null' '--srcdir=.' $ac_configure_extra_args --no-create --no-recursion
   shift
   $as_echo "running CONFIG_SHELL=/bin/bash $*" >&6
   CONFIG_SHELL='/bin/bash'
